--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "now-redirect",
+  "name": "now-vigil",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -13,5 +13,8 @@
     "microrouter": "^3.1.3",
     "node-fetch": "^2.2.0",
     "now-env": "^3.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.5"
   }
 }
