--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "micro",
-    "dev": "nodemon --exec yarn start"
+    "start": "NODE_ENV=production node server.js",
+    "build": "next build",
+    "dev": "node server.js"
   },
   "license": "MIT",
   "dependencies": {
     "lodash": "^4.17.11",
-    "micro": "^9.3.3",
-    "microrouter": "^3.1.3",
-    "node-fetch": "^2.2.0",
-    "now-env": "^3.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.18.5"
+    "next": "^7.0.2",
+    "node-fetch": "^2.3.0",
+    "now-env": "^3.1.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
   }
 }
